[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5"
rayon = "1"
itertools = "0.10"
regex = "1"
meval = "0.2"
lazy_static = "1"
anyhow = "1"
derivative = "2"
glam = "0.22"
priority-queue = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"